Fix an annoying misalignment of the users name

--- a/webapp/cake-explorer/src/app/app.component.less
+++ b/webapp/cake-explorer/src/app/app.component.less
@@ -5,6 +5,8 @@
   &__login-area {
     position: fixed;
     right: 1em;
+    display: flex;
+    align-items: center;
   }
 
   &__main {
